cleansed juniper data

--- a/access_log/Untitled2.ipynb
+++ b/access_log/Untitled2.ipynb
@@ -174,7 +174,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {
     "collapsed": false
    },
@@ -185,13 +185,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "URL = urllib.urlopen('https://doc-04-0c-docs.googleusercontent.com/docs/securesc/ha0ro937gcuc7l7deffksulhg5h7mbp1/12ir2olou9sklqs463vdda1nv70kbpst/1443074400000/13625217592848274312/*/0B9C3OkBK2B-JRlBkYXI4UXo5RVU?e=download')"
+    "infile = \"C:\\Temp\\hk-ssg140.log-20150922\""
    ]
   },
   {
@@ -203,17 +203,177 @@
    },
    "outputs": [],
    "source": [
-    "juniper = jp.read_syslog_juniper(URL)"
+    "juniper = jp.read_syslog_juniper(infile)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {
     "collapsed": false,
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>time</th>\n",
+       "      <th>device_name</th>\n",
+       "      <th>traffic_start</th>\n",
+       "      <th>duration</th>\n",
+       "      <th>policy_no</th>\n",
+       "      <th>service</th>\n",
+       "      <th>protocol</th>\n",
+       "      <th>src_zone</th>\n",
+       "      <th>dst_zone</th>\n",
+       "      <th>action</th>\n",
+       "      <th>sent_size</th>\n",
+       "      <th>received_size</th>\n",
+       "      <th>src_address</th>\n",
+       "      <th>dst_address</th>\n",
+       "      <th>src_port</th>\n",
+       "      <th>dst_port</th>\n",
+       "      <th>remarks</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2015-09-20 03:47:04</td>\n",
+       "      <td>hk-SSG140</td>\n",
+       "      <td>2015-09-20 03:59:04</td>\n",
+       "      <td>0</td>\n",
+       "      <td>6</td>\n",
+       "      <td>tcp/port:2539</td>\n",
+       "      <td>6</td>\n",
+       "      <td>HK-LAN</td>\n",
+       "      <td>Untrust</td>\n",
+       "      <td>Deny</td>\n",
+       "      <td>0</td>\n",
+       "      <td>28</td>\n",
+       "      <td>172.20.78.90</td>\n",
+       "      <td>192.168.137.42</td>\n",
+       "      <td>139</td>\n",
+       "      <td>2539</td>\n",
+       "      <td>session_id=0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2015-09-20 03:47:05</td>\n",
+       "      <td>hk-SSG140</td>\n",
+       "      <td>2015-09-20 03:58:05</td>\n",
+       "      <td>61</td>\n",
+       "      <td>397</td>\n",
+       "      <td>udp/port:37738</td>\n",
+       "      <td>17</td>\n",
+       "      <td>AP-WAN</td>\n",
+       "      <td>HK-DMZ</td>\n",
+       "      <td>Permit</td>\n",
+       "      <td>93</td>\n",
+       "      <td>0</td>\n",
+       "      <td>10.20.47.254</td>\n",
+       "      <td>172.24.66.31</td>\n",
+       "      <td>161</td>\n",
+       "      <td>37738</td>\n",
+       "      <td>src-xlated</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2015-09-20 03:47:05</td>\n",
+       "      <td>hk-SSG140</td>\n",
+       "      <td>2015-09-20 03:58:04</td>\n",
+       "      <td>62</td>\n",
+       "      <td>587</td>\n",
+       "      <td>snmp</td>\n",
+       "      <td>17</td>\n",
+       "      <td>HK-DMZ</td>\n",
+       "      <td>HK-DMZ</td>\n",
+       "      <td>Permit</td>\n",
+       "      <td>90</td>\n",
+       "      <td>0</td>\n",
+       "      <td>172.24.66.31</td>\n",
+       "      <td>172.20.68.253</td>\n",
+       "      <td>47176</td>\n",
+       "      <td>161</td>\n",
+       "      <td>src-xlated</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2015-09-20 03:47:05</td>\n",
+       "      <td>hk-SSG140</td>\n",
+       "      <td>2015-09-20 03:58:05</td>\n",
+       "      <td>61</td>\n",
+       "      <td>505</td>\n",
+       "      <td>snmp</td>\n",
+       "      <td>17</td>\n",
+       "      <td>HK-DMZ</td>\n",
+       "      <td>HK-LAN</td>\n",
+       "      <td>Permit</td>\n",
+       "      <td>92</td>\n",
+       "      <td>0</td>\n",
+       "      <td>172.24.66.31</td>\n",
+       "      <td>172.20.78.2</td>\n",
+       "      <td>42377</td>\n",
+       "      <td>161</td>\n",
+       "      <td>src-xlated</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>2015-09-20 03:47:05</td>\n",
+       "      <td>hk-SSG140</td>\n",
+       "      <td>2015-09-20 03:58:05</td>\n",
+       "      <td>61</td>\n",
+       "      <td>505</td>\n",
+       "      <td>snmp</td>\n",
+       "      <td>17</td>\n",
+       "      <td>HK-DMZ</td>\n",
+       "      <td>HK-LAN</td>\n",
+       "      <td>Permit</td>\n",
+       "      <td>92</td>\n",
+       "      <td>0</td>\n",
+       "      <td>172.24.66.31</td>\n",
+       "      <td>172.20.78.2</td>\n",
+       "      <td>37738</td>\n",
+       "      <td>161</td>\n",
+       "      <td>src-xlated</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                 time device_name       traffic_start duration policy_no  \\\n",
+       "0 2015-09-20 03:47:04   hk-SSG140 2015-09-20 03:59:04        0         6   \n",
+       "1 2015-09-20 03:47:05   hk-SSG140 2015-09-20 03:58:05       61       397   \n",
+       "2 2015-09-20 03:47:05   hk-SSG140 2015-09-20 03:58:04       62       587   \n",
+       "3 2015-09-20 03:47:05   hk-SSG140 2015-09-20 03:58:05       61       505   \n",
+       "4 2015-09-20 03:47:05   hk-SSG140 2015-09-20 03:58:05       61       505   \n",
+       "\n",
+       "          service protocol src_zone dst_zone  action sent_size received_size  \\\n",
+       "0   tcp/port:2539        6   HK-LAN  Untrust    Deny         0            28   \n",
+       "1  udp/port:37738       17   AP-WAN   HK-DMZ  Permit        93             0   \n",
+       "2            snmp       17   HK-DMZ   HK-DMZ  Permit        90             0   \n",
+       "3            snmp       17   HK-DMZ   HK-LAN  Permit        92             0   \n",
+       "4            snmp       17   HK-DMZ   HK-LAN  Permit        92             0   \n",
+       "\n",
+       "    src_address     dst_address src_port dst_port       remarks  \n",
+       "0  172.20.78.90  192.168.137.42      139     2539  session_id=0  \n",
+       "1  10.20.47.254    172.24.66.31      161    37738    src-xlated  \n",
+       "2  172.24.66.31   172.20.68.253    47176      161    src-xlated  \n",
+       "3  172.24.66.31     172.20.78.2    42377      161    src-xlated  \n",
+       "4  172.24.66.31     172.20.78.2    37738      161    src-xlated  "
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "juniper.head()"
    ]
