read in using chunks

--- a/access_log/Untitled2.ipynb
+++ b/access_log/Untitled2.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false
    },
@@ -181,6 +181,56 @@
    "outputs": [],
    "source": [
     "#sum(squid.bytes)/Gb"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "def juniper_log_cleansing(x):\n",
+    "    if x.find('=') > 0:\n",
+    "        return x[x.find('=')+1:]\n",
+    "    elif x.find(':') > 0:\n",
+    "        return x[:x.find(':')]    \n",
+    "    else:\n",
+    "        return x\n",
+    "\n",
+    "def read_syslog_juniper(filename):\n",
+    "    \n",
+    "    #if (filename)[-3:] == '.gz':\n",
+    "    #    f = hp.open_gz(filename)\n",
+    "    #elif (filename)[-6:] == 'tar.gz':\n",
+    "    #    f = hp.open_tar_gz(filename)\n",
+    "    #else:\n",
+    "    #    f = hp.open_txt(filename)\n",
+    "    \n",
+    "    chunksize = 20000\n",
+    "    \n",
+    "    #df =  pd.read_csv('311_100M.csv', chunksize=chunksize, iterator=True, encoding='utf-8'):\n",
+    "    df = pd.DataFrame()\n",
+    "    \n",
+    "    for c in pd.read_table(filename, sep=' {1,}|\"', chunksize=chunksize, iterator=True, engine='python', index_col=False, header=None, parse_dates=[[0, 1, 2], [9,10]]):\n",
+    "            df = pd.concat([df, c])\n",
+    "            print(str(chunk) + \" processed.\")\n",
+    "    \n",
+    "    # restructure the dataframe\n",
+    "    i = [0]\n",
+    "    i.extend(range(3, 4))\n",
+    "    i.extend([1])\n",
+    "    i.extend(range(9, 13))\n",
+    "    i.extend([14])\n",
+    "    i.extend([16])\n",
+    "    i.extend(range(17, 25))\n",
+    "    df = df.iloc[:, i]\n",
+    "    \n",
+    "    df.columns = ['time', 'device_name', 'traffic_start', 'duration', 'policy_no', 'service', 'protocol', 'src_zone', 'dst_zone', 'action', 'sent_size', 'received_size', 'src_address', 'dst_address', 'src_port', 'dst_port', 'remarks']\n",
+    "    df[['device_name', 'duration', 'policy_no', 'service', 'protocol', 'src_zone', 'dst_zone', 'action', 'sent_size', 'received_size', 'src_address', 'dst_address', 'src_port', 'dst_port']] = df[['device_name', 'duration', 'policy_no', 'service', 'protocol', 'src_zone', 'dst_zone', 'action', 'sent_size', 'received_size', 'src_address', 'dst_address', 'src_port', 'dst_port']].applymap(juniper_log_cleansing)\n",
+    "    \n",
+    "    return df"
    ]
   },
   {
