--- a/access_log/Untitled2.ipynb
+++ b/access_log/Untitled2.ipynb
@@ -337,7 +337,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
@@ -367,22 +367,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "948911 rows processed.\n",
-      "hk-ssg140.log-20150921 processed\n",
-      "1657993 rows processed.\n",
-      "hk-ssg140.log-20150922 processed\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "for file in os.listdir(log_dir):\n",
     "    log_file = os.path.join(log_dir, file)\n",
@@ -397,7 +386,7 @@
     "    \n",
     "    temp_result = jp.process_group(juniper)\n",
     "    \n",
-    "    temp_result = pd.DataFrame(temp_result, columns=['date', 'src', 'dst', 'service', 'count', 'total_size', 'action'])\n",
+    "    temp_result = pd.DataFrame(temp_result, columns=['date', 'src', 'dst', 'count', 'total_size'])\n",
     "    temp_result['location'] = 'HK'\n",
     "    \n",
     "    try:\n",
@@ -426,7 +415,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
-   "version": "2.7.8"
+   "version": "2.7.10"
   }
  },
  "nbformat": 4,
