--- a/access_log/Untitled2.ipynb
+++ b/access_log/Untitled2.ipynb
@@ -337,7 +337,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {
     "collapsed": false
    },
@@ -367,11 +367,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "820733 rows processed.\n",
+      "hk-ssg140.log processed\n",
+      "1549682 rows processed.\n",
+      "hk-ssg140.log-20150922 processed\n"
+     ]
+    }
+   ],
    "source": [
     "for file in os.listdir(log_dir):\n",
     "    log_file = os.path.join(log_dir, file)\n",
@@ -381,6 +392,7 @@
     "    temp_result = []\n",
     "    \n",
     "    juniper = jp.read_syslog_juniper(temp_csv)\n",
+    "    \n",
     "    juniper['date'] = juniper['time'].apply(lambda x: x.strftime('%Y-%m-%d'))\n",
     "    juniper['total_size'] = juniper['sent_size'] + juniper['received_size']        \n",
     "    \n",
