--- a/access_log/Untitled2.ipynb
+++ b/access_log/Untitled2.ipynb
@@ -157,8 +157,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "247672 rows processed.\n",
-      "hk-ssg140.log processed\n"
+      "2179589 rows processed.\n",
+      "hk-ssg140.log-20151009 processed\n",
+      "2064902 rows processed.\n",
+      "hk-ssg140.log-20151010 processed\n",
+      "1527649 rows processed.\n",
+      "hk-ssg140.log-20151011 processed\n"
      ]
     }
    ],
